tests/error/comptime/pointer_arithmetic16.bz
function test()
{
	(consteval {
		let a: [[5: int32], [5: int32]];
		&a[1, 0] + 5 - 5 - 1;
	});
}
